# chokidar-napi

./: Cargo.toml  README.md  cli.js  index.d.ts  index.js  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
src/: lib.rs
