[package]
edition = "2021"
name = "chokidar"
version = "0.1.0"
description = "A cross-platform command line utility to watch file system changes."
repository = "https://github.com/ahaoboy/chokidar-napi"
homepage = "https://github.com/ahaoboy/chokidar-napi"
authors = ["ahaoboy"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = "2"
napi-derive = "2"
chokidar = { git = "https://github.com/ahaoboy/chokidar.git" }
clap = { version = "4.5", features = ["derive"] }
wasm-bindgen = "0.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
